--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
-			          <li><a href="about.html">About</a></li>
+			          <li><a href="ToolsExpertness.html">Tools</a></li>
 			          <li><a href="#">Services</a></li>
 			          <li><a href="#">Portfolio</a></li>
 			          <li><a href="#">Pricing</a></li>
