--- a/ToolsExpertness.html
+++ b/ToolsExpertness.html
@@ -40,7 +40,8 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
-			          <li><a href="ToolsExpertness.html">Tools</a></li>
+			          <li><a href="#tools">Tools</a></li>
+                                  <!--<li><a href="ToolsExpertness.html">Tools</a></li>-->
 			          <li><a href="#">Services</a></li>
 			          <li><a href="#">Portfolio</a></li>
 			          <li><a href="#">Pricing</a></li>
@@ -69,7 +70,7 @@
 		  </header><!-- #header -->
 
 			<!-- start banner Area -->
-			<section class="about-banner" style="height:150px;">
+			<section class="about-banner" style="height:150px;" id="tools">
 				<div class="container">
 					<div class="row d-flex align-items-center justify-content-center">
 						<div class="about-content col-lg-12">
