--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
 			      <nav id="nav-menu-container">
 			        <ul class="nav-menu">
 			          <li><a href="index.html">Home</a></li>
-			          <li><a href="ToolsExpertness.html">Tools</a></li>
-			          <li><a href="#">Services</a></li>
-			          <li><a href="#">Portfolio</a></li>
-			          <li><a href="#">Pricing</a></li>
-			          <li class="menu-has-children"><a href="">Blog</a>
+                                  <li><a href="#tools">Tools</a></li>
+                                  <!--<li><a href="ToolsExpertness.html">Tools</a></li>-->
+			          <!--<li><a href="#">Services</a></li>-->
+			          <!--<li><a href="#">Portfolio</a></li>-->
+			          <!--<li><a href="#">Pricing</a></li>-->
+			          <!--<li class="menu-has-children"><a href="">Blog</a>
 			            <ul>
 			              <li><a href="#">Blog Home</a></li>
 			              <li><a href="#>Blog Single</a></li>
@@ -60,8 +61,9 @@
 				            </ul>
 				          </li>
 			            </ul>
-			          </li>
-			          <li><a href="contact.html">Contact</a></li>
+			          </li>-->
+								<li><a href="#contact">Contact</a></li>
+			          <!--<li><a href="contact.html">Contact</a></li>-->
 			        </ul>
 			      </nav><!-- #nav-menu-container -->
 		    	</div>
@@ -107,6 +109,155 @@
 				</div>
 			</section><br><br>
 			<!-- End home-about Area -->
+
+<!-- start banner Area -->
+			<section class="about-banner" style="height:150px;" id="tools">
+				<div class="container">
+					<div class="row d-flex align-items-center justify-content-center">
+						<div class="about-content col-lg-12">
+							<h3 class="text-white" style="margin-top:-60px;">
+								WEB DEVELOPMENT
+							</h3>
+
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End banner Area -->
+
+                                                        <br><br>
+							<h4 class="pt-30">Tools Expertness</h4>
+						</div>
+					</div>
+					<div class="row skillbar-wraps">
+						<div class="col-lg-6 skill-left">
+							<div class="single-skill">
+								<p>
+									HTML5 85%
+								</p>
+								<div class="skill" data-width="85"></div>
+							</div>
+							<div class="single-skill">
+								<p>
+									CSS 60%
+								</p>
+								<div class="skill" data-width="60"></div>
+							</div>
+							<div class="single-skill">
+								<p>
+									Node js 45%
+								</p>
+								<div class="skill" data-width="1"></div>
+							</div>
+						</div>
+						<div class="col-lg-6 skill-right">
+							<div class="single-skill">
+								<p>
+									Bootstrap 60%
+								</p>
+								<div class="skill" data-width="60"></div>
+							</div>
+							<div class="single-skill">
+								<p>
+									JavaScript 55%
+								</p>
+								<div class="skill" data-width="1"></div>
+							</div>
+
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End home-about Area -->
+
+
+			<!-- start banner Area -->
+			<!--<section class="relative about-banner" style="height:200px;">
+				<div class="overlay overlay-bg"></div>
+				<div class="container">
+					<div class="row d-flex align-items-center justify-content-center">
+						<div class="about-content col-lg-12">
+							<h1 class="text-white">
+								Contact Us
+							</h1>
+							<p class="text-white link-nav"><a href="index.html">Home </a>  <span class="lnr lnr-arrow-right"></span>  <a href="contact.html"> Contact Us</a></p>
+						</div>
+					</div>
+				</div>
+			</section>-->
+      <br>
+			<section class="relative about-banner" style="height:100px;">
+				<br>
+				<center>
+
+							<h1 class="text-white">
+								Contact Us
+							</h1>
+       </center>
+			</section>
+			<!-- End banner Area -->
+
+			<!-- Start contact-page Area -->
+			<section class="contact-page-area section-gap" id="contact">
+				<div class="container">
+					<div class="row">
+						<div class="map-wrap" style="width:0%; height: 150px;" id="map"></div>
+						<div class="col-lg-4 d-flex flex-column address-wrap">
+							<div class="single-contact-address d-flex flex-row">
+								<div class="icon">
+									<span class="lnr lnr-home"></span>
+								</div>
+								<div class="contact-details">
+									<h5>Jaffna, Sri Lanka</h5>
+									<p>
+										Pillayar kovil lane ,Viyaparimoolai,Point-Pedro.
+									</p>
+								</div>
+							</div>
+							<div class="single-contact-address d-flex flex-row">
+								<div class="icon">
+									<span class="lnr lnr-phone-handset"></span>
+								</div>
+								<div class="contact-details">
+									<h5>+94 (77) 113 4767</h5>
+									<p>Mon to Fri 9am to 6 pm</p>
+								</div>
+							</div>
+							<div class="single-contact-address d-flex flex-row">
+								<div class="icon">
+									<span class="lnr lnr-envelope"></span>
+								</div>
+								<div class="contact-details">
+									<h5>sslogan1998@gmail.com</h5>
+									<p>Send us your query anytime!</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-lg-8">
+							<form class="form-area contact-form text-right" id="myForm" action="mail.php" method="post">
+								<div class="row">
+									<div class="col-lg-6 form-group">
+										<input name="name" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mb-20 form-control" required="" type="text">
+
+										<input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mb-20 form-control" required="" type="email">
+
+										<input name="subject" placeholder="Enter subject" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter subject'" class="common-input mb-20 form-control" required="" type="text">
+									</div>
+									<div class="col-lg-6 form-group">
+										<textarea class="common-textarea form-control" name="message" placeholder="Enter Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Messege'" required=""></textarea>
+									</div>
+									<div class="col-lg-12">
+										<div class="alert-msg" style="text-align: left;"></div>
+										<button class="genric-btn primary" style="float: right;">Send Message</button>
+									</div>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- End contact-page Area -->
+
 
 			<!-- Start services Area -->
 
