--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 								</p>
 								<div class="skill" data-width="60"></div>
 							</div>
-							<div class="single-skill">
+							<div class="single-skill" >
 								<p>
 									Node js 45%
 								</p>
-								<div class="skill" data-width="1"></div>
+								<div class="skill" data-width="45"></div>
 							</div>
 						</div>
 						<div class="col-lg-6 skill-right">
@@ -161,7 +161,7 @@
 								<p>
 									JavaScript 55%
 								</p>
-								<div class="skill" data-width="1"></div>
+								<div class="skill" data-width="55"></div>
 							</div>
 
 						</div>
@@ -186,12 +186,14 @@
 				</div>
 			</section>-->
       <br>
+			<br>
+			<br>
 			<section class="relative about-banner" style="height:100px;">
 				<br>
 				<center>
 
 							<h1 class="text-white">
-								Contact Us
+								Contact Me
 							</h1>
        </center>
 			</section>
