--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           <p class="category text-white">Web Developer</p><a class="btn btn-primary smooth-scroll mr-2" href="#contact" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Hire Me</a><!--<a class="btn btn-primary" href="#" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download CV</a>-->
         </div>
       </div>
-      <div class="section">
+    <!--  <div class="section">
         <div class="container">
-          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fa fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fa fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fa fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fa fa-instagram"></i></a></div>
+          <div class="button-container"><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Facebook"><i class="fab fa-facebook"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Twitter"><i class="fab fa-twitter"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Google+"><i class="fab fa-google-plus"></i></a><a class="btn btn-default btn-round btn-lg btn-icon" href="#" rel="tooltip" title="Follow me on Instagram"><i class="fab fa-instagram"></i></a></div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
@@ -62,8 +62,8 @@
         <div class="col-lg-6 col-md-12">
           <div class="card-body">
             <div class="h4 mt-0 title">About</div>
-            <p>Hello! I am Sooriyakumar Loganathan. Web Developer.</p>
-            <p>Iam an adventurus soul. I love to work with computer. You can call me as Logu. <!--<a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a>--></p>
+            <p>Hello! I am Sooriyakumar Loganathan. </p>
+            <p>I am a multi-talented person with an optimistic perspective in life.  <br>I love to work in both Backend and Frontend. As a good team-player, <br> I can get along with anybody and complete the tasks that are assigned to me.  <!--<a href="https://templateflip.com/templates/creative-cv/" target="_blank">Learn More</a>--></p>
           </div>
         </div>
         <div class="col-lg-6 col-md-12">
@@ -83,7 +83,7 @@
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Address:</strong></div>
-              <div class="col-sm-8">Pillaiyar kovil lane, Viyaparimmolai, Point-Pedro, Jaffna, Sri Lanka</div>
+              <div class="col-sm-8">Pillaiyar kovil lane, Viyaparimoolai, Point-Pedro, Jaffna, Sri Lanka</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
@@ -111,7 +111,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">CSS</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div><span class="progress-value">80%</span>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">JavaScript</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">55%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div><span class="progress-value">60%</span>
               </div>
             </div>
           </div>
@@ -143,7 +143,23 @@
           <div class="col-md-6">
             <div class="progress-container progress-primary"><span class="progress-badge">jQuery</span>
               <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">50%</span>
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Node.js</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div><span class="progress-value">75%</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="progress-container progress-primary"><span class="progress-badge">Express.js</span>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 70%;"></div><span class="progress-value">70%</span>
               </div>
             </div>
           </div>
@@ -171,33 +187,33 @@
         <div class="ml-auto mr-auto">
           <div class="row">
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" target="blank">
-                  <figure class="cc-effect"><img src="images/project-1.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom" ><a href="https://ukiassignment3bylogu.herokuapp.com" target="blank">
+                  <figure class="cc-effect" style="height:25vw;"><img src="images/project-1.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Recent Project</div>
+                      <div class="h4">Show Trackr</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" target="blank">
-                  <figure class="cc-effect"><img src="images/project-2.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://ukifunwork3bylogu.herokuapp.com" target="blank">
+                  <figure class="cc-effect" style="height:25vw;"><img src="images/project-2.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Startup Project</div>
+                      <div class="h4">Tic Tac Toe</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
             </div>
             <div class="col-md-6">
-              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="#web-development" target="blank">
-                  <figure class="cc-effect"><img src="images/project-3.jpg" alt="Image"/>
+              <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://cakeangels.herokuapp.com" target="blank">
+                  <figure class="cc-effect" style="height:25vw;"><img src="images/project-3.jpg"  alt="Image"/>
                     <figcaption>
-                      <div class="h4">Food Order Project</div>
+                      <div class="h4">Cake Angel</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom"><a href="https://loganlokku.github.io/ukifunwork1/" target="blank">
-                  <figure class="cc-effect"><img src="images/project-4.jpg" alt="Image"/>
+                  <figure class="cc-effect" style="height:25vw;"><img src="images/project-4.jpg" alt="Image"/>
                     <figcaption>
-                      <div class="h4">Sound cloud Project</div>
+                      <div class="h4">Tamil Musical Gallery</div>
                       <p>Web Development</p>
                     </figcaption>
                   </figure></a></div>
@@ -286,7 +302,9 @@
   </div>
 </div>-->
 
-<div class="section" id="experience">
+
+
+<!-- <div class="section" id="experience">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
     <div class="card">
@@ -338,7 +356,8 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
+
 
 <!-- <div class="section">
   <div class="container cc-education">
@@ -457,7 +476,7 @@
               <div class="row">
                 <div class="col-md-6">
                   <div class="card-body">
-                    <form action="https://formspree.io/your@email.com" method="POST">
+                    <form action="https://formspree.io/mzbpkkal" method="POST">
                       <div class="p pb-3"><strong>Feel free to contact me </strong></div>
                       <div class="row mb-3">
                         <div class="col">
@@ -515,7 +534,7 @@
 </div></div>
     </div>
     <footer class="footer">
-      <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div>
+      <!-- <div class="container text-center"><a class="cc-facebook btn btn-link" href="#"><i class="fa fa-facebook fa-2x " aria-hidden="true"></i></a><a class="cc-twitter btn btn-link " href="#"><i class="fa fa-twitter fa-2x " aria-hidden="true"></i></a><a class="cc-google-plus btn btn-link" href="#"><i class="fa fa-google-plus fa-2x" aria-hidden="true"></i></a><a class="cc-instagram btn btn-link" href="#"><i class="fa fa-instagram fa-2x " aria-hidden="true"></i></a></div> -->
       <div class="h4 title text-center">Sooriyakumar Loganathan</div>
       <div class="text-center text-muted">
         <p>&copy; . All rights reserved.<br> </p>
